--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button>Change the number of boxes!</button>
     <div id="container"></div>
 </body>
 </html>
